🎨 Count books containing 'ger' in title

--- a/catalog/templates/index.html
+++ b/catalog/templates/index.html
@@ -13,6 +13,9 @@
     <li><strong>Copies:</strong> {{ num_instances }}</li>
     <li><strong>Copies available:</strong> {{ num_instances_available }}</li>
     <li><strong>Authors:</strong> {{ num_authors }}</li>
+    </br>
+    <li><strong>Books Title Containing 'Ger':</strong> {{ num_ger_books }}</li>
+
   </ul>
 
 {% endblock content %}
