🎨 Count genre containing 'fic' in name

--- a/catalog/templates/index.html
+++ b/catalog/templates/index.html
@@ -15,6 +15,7 @@
     <li><strong>Authors:</strong> {{ num_authors }}</li>
     </br>
     <li><strong>Books Title Containing 'Ger':</strong> {{ num_ger_books }}</li>
+    <li><strong>Genres names Containing 'Fic':</strong> {{ num_fic_genres }}</li>
 
   </ul>
 
