♻ Return all books in the list without filter

--- a/catalog/templates/catalog/book_list_temp.html
+++ b/catalog/templates/catalog/book_list_temp.html
@@ -14,7 +14,7 @@
   {% endfor %}
 </ul>
 {% else %}
-<p>There are no books in the library with the title 'war'.</p>
+<p>There are no books in the library.</p>
 {% endif %}
 
 {% endblock content %}
