♻ Refactor book and author list iterator

--- a/catalog/templates/catalog/author_list.html
+++ b/catalog/templates/catalog/author_list.html
@@ -3,14 +3,14 @@
 {% block content %}
 <h2>Author list</h2>
 
-{% if author_list %}
 <ul>
-{% for author in author_list %}
-<li>
-<a href="">{{ author }} ({{ author.date_of_birth }} - {{ author.date_of_death }})
-</li>
-{% endfor %}
+  {% for author in author_list %}
+  <li>
+    <a href="">{{ author }} ({{ author.date_of_birth }} - {{ author.date_of_death }})
+  </li>
+  {% empty %}
+  <p>No authors yet to be registered.</p>
+  {% endfor %}
 </ul>
-{% else %}{% endif %}
 
 {% endblock content %}
