--- a/catalog/templates/base_generic.html
+++ b/catalog/templates/base_generic.html
@@ -28,6 +28,11 @@
             {% else %}
             <li><a href="{% url 'login'%}?next={{request.path}}">Login</a></li>
             {% endif %}
+            <hr>
+            {% if perms.catalog.can_mark_returned %}
+            <li>Librarian</li>
+            <li><a href="{% url 'borrowed-books' %}">All Borrowed</a></li>
+            {% endif %}
           </ul>
           {% endblock %}
         </div>
