🖇  Add renew link to borrowed book

--- a/catalog/templates/catalog/bookinstance_list_borrowed.html
+++ b/catalog/templates/catalog/bookinstance_list_borrowed.html
@@ -8,6 +8,7 @@
       <li class="{% if borrowedbk.is_overdue %}text-danger{% endif %}">
         <a href="{% url 'book-detail' borrowedbk.book.pk %}">
         {{borrowedbk.book.title}}</a> ({{ borrowedbk.due_back }}) - {{ borrowedbk.borrower }}
+        {% if perms.catalog.can_mark_returned %}- <a href="{% url 'renew-book-librarian' borrowedbk.id %}">Renew</a> {% endif %}
       </li>
       {% empty %}
       <li>There are no books borrowed.</li>
