--- a/catalog/templates/base_generic.html
+++ b/catalog/templates/base_generic.html
@@ -32,6 +32,8 @@
             {% if perms.catalog.can_mark_returned %}
             <li>Librarian</li>
             <li><a href="{% url 'borrowed-books' %}">All Borrowed</a></li>
+            <hr>
+            <li><a href="{% url 'book-create' %}">Add Book</a></li>
             {% endif %}
           </ul>
           {% endblock %}
