--- a/catalog/templates/base_generic.html
+++ b/catalog/templates/base_generic.html
@@ -34,6 +34,8 @@
             <li><a href="{% url 'borrowed-books' %}">All Borrowed</a></li>
             <hr>
             <li><a href="{% url 'book-create' %}">Add Book</a></li>
+            <hr>
+            <li><a href="{% url 'author-create' %}">Add Author</a></li>
             {% endif %}
           </ul>
           {% endblock %}
