--- a/catalog/templates/catalog/book_list_temp.html
+++ b/catalog/templates/catalog/book_list_temp.html
@@ -8,7 +8,7 @@
 <ul>
   {% for book in book_list %}
   <li>
-    <a href="{{ book.get_absolute_url }}">{{ book.title }}</a>
+    <a href="{{ book.get_absolute_url }}">{{ book.title }}</a> {% if perms.catalog.can_mark_returned %}- <a href="{% url 'book-update' book.pk %}">Edit</a>{% endif %}
   </li>
   {% empty %}
   <p>There are no books in the library.</p>
