--- a/catalog/templates/catalog/author_detail.html
+++ b/catalog/templates/catalog/author_detail.html
@@ -5,6 +5,10 @@
 
 <p>{{ author.date_of_birth|default_if_none:' ' }} - {{ author.date_of_death|default_if_none:' ' }}</p>
 
+{% if perms.catalog.can_mark_returned %}
+<a href="{% url 'author-update' author.pk %}">Edit Author</a>
+{% endif %}
+
 <div style="margin-left:20px;margin-top:20px">
   <h4>Books</h4>
 
