--- a/catalog/templates/catalog/author_list.html
+++ b/catalog/templates/catalog/author_list.html
@@ -6,7 +6,10 @@
 <ul>
   {% for author in author_list %}
   <li>
-    <a href="{% url 'author-detail' author.pk %}">{{ author }} ({{ author.date_of_birth|default_if_none:"" }} - {{ author.date_of_death|default_if_none:"" }})
+    <a href="{% url 'author-detail' author.pk %}">{{ author }} ({{ author.date_of_birth|default_if_none:"" }} - {{ author.date_of_death|default_if_none:"" }})</a>
+    {% if perms.catalog.can_mark_returned %}
+     - <a href="{% url 'author-update' author.pk %}">Edit</a>
+    {% endif %}
   </li>
   {% empty %}
   <p>No authors yet to be registered.</p>
