--- a/catalog/templates/catalog/book_detail.html
+++ b/catalog/templates/catalog/book_detail.html
@@ -3,6 +3,11 @@
 {% block content %}
   <h1>Title: {{ book.title }}</h1>
 
+  {% if perms.catalog.can_mark_returned %}
+  <a href="{% url 'book-update' book.pk %}">Edit Book</a>
+  <a href="{% url 'book-delete' book.pk %}">Remove Book</a>
+  {% endif %}
+
   <p><strong>Author:</strong> <a href="{% url 'author-detail' book.author.pk %}">{{ book.author }}</a></p> <!-- author detail link not yet defined -->
   <p><strong>Summary:</strong> {{ book.summary }}</p>
   <p><strong>ISBN:</strong> {{ book.isbn }}</p>
